# mochi22-Original-Pomodoro-Technique-Timer

./: README.md  pyproject.toml  setup.py
src/: __init__.py  config.py  examples.py  main.py  pomodoro.py
src/pomodoro_mac_menubar/: __init__.py
tests/: test_pomodoro.py
